# CSIT314Project

./: README.md  main.py  meeting minutes.  meeting minutes.txt  pyproject.toml
reports/: TestResults___main__.TestWA_2021-05-31_16-13-58.html
wolfTest/: api.py  assert.py  generate.py  main.py  test.py
