[tool.poetry]
name = "csci314project"
version = "0.1.0"
description = "Group project for CSCI314"
authors = ["Alex Carter <acarter010204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sympy = "^1.8"
unittest = "^0.0"
html-testRunner = "^1.2.1"
Pint = "^0.17"
Random-Word = "^1.0.7"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
